[metadata]
name = tandems
version = 0.988
author = Jose M. Ripalda
author_email = j.ripalda@csic.es
description = Calculates multijunction solar cell efficiency
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ripalda/Tandems
project_urls =
    Bug Tracker = https://github.com/Ripalda/Tandems/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
install_requires =
	numpy
	matplotlib
	scipy
    sklearn
    datetime
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
